Added Signup - Fix Routing - Del Loader

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="col-lg-6 col-md-6 col-sm-12">
     <div class="card border-primary shadow">
       <div class="card-body">
-        <p class="card-title text-center fw-light display-4">Login</p>
+        <p class="card-title text-center fw-light h1">Login</p>
         <hr>
         <form [formGroup]="loginForm" (ngSubmit)="login()" class="row g-3">
           <div>
