--- a/src/app/commons/layouts/app-layout-footer/app-layout-footer.component.html
+++ b/src/app/commons/layouts/app-layout-footer/app-layout-footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto bg-light shadow-sm text-muted py-1">
+<footer class="footer mt-auto bg-dark shadow-sm text-muted py-1 border-top border-1 border-primary">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center my-0 py-0">
