--- a/src/app/commons/layouts/app-layout-header/app-layout-header.component.html
+++ b/src/app/commons/layouts/app-layout-header/app-layout-header.component.html
@@ -26,7 +26,7 @@
       <a class="nav-link mx-1" href="#">Fee & Expenses</a>
       <a class="nav-link mx-1" href="#">Admission Schedule</a>
       <a class="nav-link mx-1" href="#">Contact Us</a>
-      <a class="nav-link mx-1" [routerLink]="['auth/login']"><strong>Login</strong></a>
+      <a class="nav-link mx-1" [routerLink]="['auth/login']">Login</a>
     </nav>
   </div>
 
