--- a/src/app/commons/layouts/app-layout-header/app-layout-header.component.scss
+++ b/src/app/commons/layouts/app-layout-header/app-layout-header.component.scss
@@ -4,7 +4,12 @@
     }
  }
 
+@media (min-width: 992px) {
+  #headerLogo {
+    width: 40%;
+  }
+}
+
 .nav-link {
   border-bottom: 1px solid gray;
 }
-
