--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,29 +1,71 @@
-<div class="row bg-info bg-opacity-50 d-flex justify-content-md-center align-items-center vh-100 overflow-auto">
-  <div class="col-lg-6 col-md-6 col-sm-12">
+<div class="row bg-info bg-opacity-50 d-flex justify-content-md-center align-items-center min-vh-100 overflow-auto">
+  <div class="col-lg-8 col-md-10 col-sm-12">
     <div class="card border-primary shadow">
       <div class="card-body">
         <p class="h1 card-title text-center fw-light">Register</p>
         <hr>
-        <form [formGroup]="signupForm" (ngSubmit)="signup()" class="row g-3">
+        <form [formGroup]="signupForm" (ngSubmit)="signup()" class="row g-3 p-2">
           <div>
-            <div class="col-md-12">
-              <label for="fullName" class="form-label">Full Name</label>
-              <input formControlName="name" type="text" class="form-control" id="fullName" name="fullName">
+            <div class="row mb-3 g-1">
+              <div class="col-md col-sm-12 form-floating">
+                <input formControlName="firstName" type="text" class="form-control" id="firstName" name="firstName"
+                       placeholder="John">
+                <label for="firstName">First Name</label>
+              </div>
+              <div class="col-md col-sm-12 form-floating">
+                <input formControlName="middleName" type="text" class="form-control" id="middleName" name="middleName"
+                       placeholder="W.">
+                <label for="middleName">Middle Name</label>
+              </div>
+              <div class="col-md col-sm-12 form-floating">
+                <input formControlName="lastName" type="text" class="form-control" id="lastName" name="lastName"
+                       placeholder="Doe">
+                <label for="lastName">Last Name</label>
+              </div>
             </div>
-            <div class="col-md-12">
-              <label for="email" class="form-label">Email</label>
-              <input formControlName="email" type="email" class="form-control" id="email" name="email">
+            <div class="row mb-3 g-1">
+              <div class="col-md col-sm-12 form-floating">
+                <input formControlName="cnic" type="text" class="form-control" id="cnic" name="cnic"
+                       placeholder="xxxxx-xxxxxxx-x">
+                <label for="cnic">CNIC</label>
+                <div id="cincHelp" class="form-text">Enter your CNIC without dashes</div>
+              </div>
+              <div class="col-md col-sm-12 form-floating">
+                <select formControlName="gender" class="form-select" id="genderSelect" name="genderSelect">
+                  <option value="M">Male</option>
+                  <option value="F">Female</option>
+                  <option value="O">Other</option>
+                </select>
+                <label for="genderSelect">Gender</label>
+              </div>
             </div>
-            <div class="col-md-12">
-              <label for="password" class="form-label">Password</label>
-              <input formControlName="password" type="password" class="form-control" id="password" name="password">
+            <div class="row mb-3 g-1">
+              <div class="col-md form-floating">
+                <input formControlName="email" type="email" class="form-control" id="email" name="email"
+                       placeholder="abc@gmail.com">
+                <label for="email" class="form-label">Email</label>
+              </div>
             </div>
-            <div class="col-md-12">
-              <label for="confirmPassword" class="form-label">Confirm Password</label>
-              <input formControlName="confirmPassword" type="password" class="form-control" id="confirmPassword"
-                     name="confirmPassword">
+            <div class="row mb-3 g-1">
+              <div class="col-md form-floating">
+                <input formControlName="password" type="password" class="form-control" id="password" name="password"
+                       placeholder="nothing">
+                <label for="password" class="form-label">Password</label>
+              </div>
+              <div class="col-md form-floating">
+                <input formControlName="confirmPassword" type="password" class="form-control" id="confirmPassword"
+                       placeholder="nothing"
+                       name="confirmPassword">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+              </div>
             </div>
-
+            <div class="row">
+              <div class="mb-3">
+                <label for="imageFile" class="form-label">Upload your Picture</label>
+                <input class="form-control" type="file" id="imageFile" name="imageFile" formControlName="imageFile"
+                       accept="image/png, image/jpg, image/jpeg" (change)="onImageSelected($event)">
+              </div>
+            </div>
             <div class="d-grid gap-2 col-6 mx-auto mt-3 align-content-center">
               <button class="btn btn-outline-primary" type="submit">Register</button>
             </div>
