--- a/src/app/commons/layouts/app-layout-footer/app-layout-footer.component.html
+++ b/src/app/commons/layouts/app-layout-footer/app-layout-footer.component.html
@@ -1,17 +1,17 @@
-<footer class="footer mt-auto bg-dark shadow-sm text-muted py-1 border-top border-1 border-primary">
+<footer class="footer mt-auto bg-Lime300 shadow-sm text-muted">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center my-0 py-0">
-                <p>
+                <p class="lh-1">
                   <small>
                     Copyright &#9400; 2022 GIK Institute of Engineering Sciences and Technology, All Rights Resrved
                   </small>
                 </p>
             </div>
             <div class="col-12 text-center my-0 py-0">
-                <p>
+                <p class="lh-1">
                     <small>
-                        Designed & Developed by Engr. Muhammad Mohsin Zafar | FCSE | GIKI
+                        Designed & Developed by Muhammad Mohsin Zafar | FCSE | GIKI
                     </small>
                 </p>
             </div>
