--- a/src/app/commons/layouts/app-layout-header/app-layout-header.component.html
+++ b/src/app/commons/layouts/app-layout-header/app-layout-header.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid bg-light shadow-sm px-lg-5">
+<div class="container-fluid bg-Amber100 shadow-sm px-lg-5">
   <div class="px-2 py-2">
     <div class="d-flex flex-column flex-md-row flex-nowrap align-items-center justify-content-center">
       <div class="col-12 col-md-5 text-center text-md-start order-2 order-md-1">
-        <p class="h4 fw-light">
+        <p id="inst-name" class="h4 fw-light">
           Ghulam Ishaq Khan Institute <br>of Engineering Sciences & Technology
         </p>
       </div>
@@ -17,7 +17,7 @@
     </div>
   </div>
 </div>
-<div class="w-100 bg-light shadow p-2 mt-1">
+<div class="w-100 bg-Amber100 shadow p-2">
 
   <div class="container">
     <nav class="nav justify-content-center flex-md-row flex-column text-center nav-pills">
