--- a/src/app/commons/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/commons/layouts/landing-layout/landing-layout.component.html
@@ -1,5 +1,5 @@
 <app-layout-header></app-layout-header>
-<main class="h-100">
+<main class="h-100 bg-Lime300">
     <router-outlet></router-outlet>
 </main>
 <app-layout-footer></app-layout-footer>
