--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,11 +1,11 @@
-.home-main {
-  //min-height: 570px;
-  height: 100%;
-  background: url("~src/assets/images/homeBg.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
+//.home-main {
+//  //min-height: 570px;
+//  height: 100%;
+//  background: url("~src/assets/images/homeBg.png");
+//  background-repeat: no-repeat;
+//  background-position: center;
+//  background-size: cover;
+//}
 
 .gm-div{
   /* From https://css.glass */
