M: Signup, Login, Home - UI | D: proxyconfig | M: Backend url

--- a/src/app/commons/layouts/app-layout-footer/app-layout-footer.component.html
+++ b/src/app/commons/layouts/app-layout-footer/app-layout-footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto bg-Lime300 shadow-sm text-muted">
+<footer class="footer mt-auto bg-Amber100 shadow-sm text-muted pt-2">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center my-0 py-0">
