--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,38 @@
-<div class="home-main">
-  <div class="d-flex align-items-center justify-content-center vh-100">
-    <div class="gm-div h-50 w-75">
-      <div class="heading text-center my-3 p-3">
-        <mat-icon class="icos">announcement</mat-icon>
-        <hr>
-      </div>
-      <div class="text-center my-3 p-3">
-        <p class="display-4">
-          Site Under<br>Development
-        </p>
+<!--<div class="home-main">-->
+<!--  <div class="d-flex align-items-center justify-content-center vh-100">-->
+<!--    <div class="gm-div h-50 w-75">-->
+<!--      <div class="heading text-center my-3 p-3">-->
+<!--        <mat-icon class="icos">announcement</mat-icon>-->
+<!--        <hr>-->
+<!--      </div>-->
+<!--      <div class="text-center my-3 p-3">-->
+<!--        <p class="display-4">-->
+<!--          Site Under<br>Development-->
+<!--        </p>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<div class="container py-3 h-50">
+  <div class="row d-flex align-items-center">
+    <div class="col-sm-12 col-md-8">
+      <img src="assets/images/homeBg.png" class="img-fluid rounded w-100" alt="head image">
+    </div>
+    <div class="col-sm-12 col-md-4">
+      <div class="card border-primary">
+        <div class="card-header h5 fw-light text-center">
+          <i class="bi bi-exclamation-circle"></i>
+          Announcements
+        </div>
+        <div class="card-body text-secondary">
+          <p class="card-text">Quo tibique autem tincidunt ornatus arcu omittam. Instructior persecuti qui dolor magna luptatum quis. Curae varius verear nostrum ferri iuvaret numquam accumsan. Vitae scripserit atqui elaboraret augue conceptam justo tempus consetetur nullam. Nonumes sem perpetua invenire consectetuer dapibus pri pri posuere. Qui neque graece solum ea nec. Parturient sit mi aperiri ultrices elit ut pulvinar semper cras. Fermentum porta quisque aperiri mea veritus iudicabit viris.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+        </ul>
       </div>
     </div>
   </div>
