--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,18 +1,35 @@
 <div class="row bg-info bg-opacity-50 d-flex justify-content-md-center align-items-center vh-100 overflow-auto">
+
   <div class="col-lg-6 col-md-6 col-sm-12">
+    <div class="row py-3">
+      <div class="col-12 text-center">
+        <img src="assets/images/logo.png" class="img-fluid brand-img" alt="">
+      </div>
+      <div class="col-12 text-center fw-light fs-3 my-2">
+        <p>GIKI | <span class="text-muted">Admissions</span></p>
+      </div>
+      <div class="w-100"></div>
+    </div>
     <div class="card border-primary shadow">
       <div class="card-body">
         <p class="card-title text-center fw-light h1">Login</p>
         <hr>
         <form [formGroup]="loginForm" (ngSubmit)="login()" class="row g-3">
           <div>
-            <div class="col-md-12">
-              <label for="email" class="form-label">Username</label>
-              <input formControlName="email" type="text" class="form-control" id="email" name="email">
+            <div class="col-md-12 my-2 input-group">
+              <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
+              <div class="form-floating">
+                <input formControlName="email" type="text" class="form-control" id="email" name="email" placeholder="email">
+                <label for="email" class="form-label">Email</label>
+              </div>
             </div>
-            <div class="col-md-12">
-              <label for="password" class="form-label">Password</label>
-              <input formControlName="password" type="password" class="form-control" id="password" name="password">
+
+            <div class="col-md-12 my-2 input-group">
+              <span class="input-group-text"><i class="bi bi-shield-fill-x"></i></span>
+              <div class="form-floating">
+                <input formControlName="password" type="password" class="form-control" id="password" name="password" placeholder="nothing">
+                <label for="password" class="form-label">Password</label>
+              </div>
             </div>
 
             <div class="d-grid gap-2 col-6 mx-auto mt-3 align-content-center">
@@ -21,9 +38,14 @@
           </div>
         </form>
         <div class="row mt-3">
-          <div class="col-md-12 mx-auto align-content-center d-grid">
+          <div class="col-12">
             <p class="text-center">-OR-</p>
-            <a class="text-center" routerLink="/auth/register">Create a new account</a>
+          </div>
+          <div class="col-sm-12 col-md-6 mx-auto align-content-center d-grid">
+            <a class="btn btn-outline-dark text-center" routerLink="/home"><i class="bi bi-house"></i> Back to Home</a>
+          </div>
+          <div class="col-sm-12 col-md-6 mx-auto align-content-center d-grid">
+            <a class="btn btn-outline-secondary text-center" routerLink="/auth/register">Create a new account</a>
           </div>
         </div>
       </div>
