--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,14 @@
 <div class="row bg-info bg-opacity-50 d-flex justify-content-md-center align-items-center min-vh-100 overflow-auto">
-  <div class="col-lg-8 col-md-10 col-sm-12">
+  <div class="col-lg-8 col-md-10 col-sm-12 mb-3">
+    <div class="row py-3">
+      <div class="col-12 text-center">
+        <img src="assets/images/logo.png" class="img-fluid brand-img" alt="">
+      </div>
+      <div class="col-12 text-center fw-light fs-3 my-2">
+        <p>GIKI | <span class="text-muted">Admissions</span></p>
+      </div>
+      <div class="w-100"></div>
+    </div>
     <div class="card border-primary shadow">
       <div class="card-body">
         <p class="h1 card-title text-center fw-light">Register</p>
@@ -66,8 +75,16 @@
                        accept="image/png, image/jpg, image/jpeg" (change)="onImageSelected($event)">
               </div>
             </div>
-            <div class="d-grid gap-2 col-6 mx-auto mt-3 align-content-center">
-              <button class="btn btn-outline-primary" type="submit">Register</button>
+            <div class="row mt-3">
+              <div class="col-md-4 col-sm-12 mx-auto align-content-center d-grid">
+                <a class="btn btn-outline-dark text-center" routerLink="/home"><i class="bi bi-house"></i> Back to Home</a>
+              </div>
+              <div class="d-grid gap-2 col-md-4 col-sm-12 mx-auto align-content-center">
+                <button class="btn btn-outline-primary" type="submit">Register</button>
+              </div>
+              <div class="d-grid gap-2 col-md-4 col-sm-12 mx-auto align-content-center">
+                <button class="btn btn-outline-danger" type="reset">Reset</button>
+              </div>
             </div>
 
           </div>
