--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,6 @@
-//.home-main {
-//  //min-height: 570px;
-//  height: 100%;
+//.header-img {
+//  min-height: 570px;
+//  //height: 100%;
 //  background: url("~src/assets/images/homeBg.png");
 //  background-repeat: no-repeat;
 //  background-position: center;
